Simplified protocols and thinking through graph traversal.